# plank

./: meson.build
data/: meson.build
data/themes/: Makefile.am
data/themes/Default/: dock.theme
data/themes/Matte/: dock.theme
data/themes/Translucent/: dock.theme
data/themes/Transparent/: dock.theme
docklets/Calendar/: CalendarDockItem.vala  meson.build
lib/: DockRenderer.vala  meson.build
lib/Drawing/: DockTheme.vala  Enums.vala
