NULL =

defaultthemedir = $(pkgdatadir)/themes/Default
dist_defaulttheme_DATA = \
	Default/dock.theme \
	$(NULL)

mattethemedir = $(pkgdatadir)/themes/Matte
dist_mattetheme_DATA = \
	Matte/dock.theme \
	$(NULL)

Translucentthemedir = $(pkgdatadir)/themes/Translucent
dist_Translucenttheme_DATA = \
	Translucent/dock.theme \
	$(NULL)

transparentthemedir = $(pkgdatadir)/themes/Transparent
dist_transparenttheme_DATA = \
	Transparent/dock.theme \
	$(NULL)
